# mesh-lite-node-capstone-project

./: .gitignore  partitions.csv  sdkconfig.defaults
docs/: ARQUITECTURA_PROYECTO.md  POWER_MANAGEMENT.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/leaf_node/: camera_driver.c  camera_driver.h  leaf_node.c  leaf_node.h  sd_storage.c  sd_storage.h  ulp_pir.c  ulp_pir.h
main/relay_node/: relay_node.c  relay_node.h
main/root_node/: root_node.c  root_node.h
main/ulp/: pir_monitor.S
